Remove SkipCount
