# garden-app/server/scheduler.go
@@ -33,16 +33,6 @@ func (pr PlantsResource) addWateringSchedule(g *pkg.Garden, p *pkg.Plant) error 
 		Do(func() {
 			defer pr.influxdbClient.Close()
 
-			if p.SkipCount != nil && *p.SkipCount > 0 {
-				*p.SkipCount--
-
-				err = pr.storageClient.SavePlant(p)
-				if err != nil {
-					logger.Error("Error saving plant after watering: ", err)
-				}
-				return
-			}
-
 			logger.Infof("Executing WateringAction to water Plant %s for %d ms", p.ID.String(), action.Duration)
 			err = action.Execute(g, p, pr.mqttClient, pr.influxdbClient)
 			if err != nil {
@@ -66,12 +56,6 @@ func (pr PlantsResource) getNextWateringTime(p *pkg.Plant) *time.Time {
 		for _, tag := range job.Tags() {
 			if tag == p.ID.String() {
 				result := job.NextRun()
-				if p.SkipCount != nil {
-					interval, _ := time.ParseDuration(p.WaterSchedule.Interval)
-					for i := uint(0); i < *p.SkipCount; i++ {
-						result = result.Add(interval)
-					}
-				}
 				return &result
 			}
 		}
